updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a security analyst</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Minnesota</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Biking and boating</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>CISO</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Minnesota</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want expand my skills</p>
     </section>
 
     <footer id="footer">
